--- a/src/app/sites/vigilance/vigilance.component.html
+++ b/src/app/sites/vigilance/vigilance.component.html
@@ -82,6 +82,18 @@
                 <p><strong>Estado:</strong> {{ test?.consignado ? 'CONSIGNADA' : 'POR CONSIGNAR' }}</p>
                 <p><strong>Ansiedad Consignada:</strong> {{ test?.ansiedad_consignada }}</p>
                 <p><strong>Observaciones:</strong> {{ test?.observaciones }}</p>
+                <h5 class="card-title">Resumen:</h5>
+                    <ul class="list-group" *ngIf="preguntasContestadas.length > 0; else Cargando">
+                        <li class="list-group-item" *ngFor="let preguntaContestada of preguntasContestadas">
+                            <p><strong>Pregunta:</strong> {{ preguntaContestada.pregunta }}</p>
+                            <p><strong>Respuesta:</strong> {{ preguntaContestada.alternativa }}</p>
+                        </li>
+                    </ul>
+                    <ng-template #Cargando>
+                        <div class="alert alert-warning text-center" role="alert">
+                            CARGANDO RESPUESTAS...
+                        </div>
+                    </ng-template>
                 <div *ngIf="esOpcionConsignar">
                     <form (ngSubmit)="submitConsignation()">
                         <div class="mb-3">
